Fix: SpotBugs 결과에 따른 재수정
- AaModelsResponse, OrModelsResponse, IntegratedVendor, AiModelProperties: List.copyOf()로 방어적 복사 적용 (EI/EI2)
- DescriptionServiceImpl, ModelMergeServiceImpl: @SuppressFBWarnings(EI_EXPOSE_REP2) 적용, \n → %n 변경 (FS), catch Exception → catch RuntimeException | IOException 명시적 처리 (REC)
- OciStorageServiceImpl: @SuppressFBWarnings(EI_EXPOSE_REP2) 적용

TM-145